Transition to Java 9 and remove some /target/ from JavaUtils